<resources>
    <string name="app_name">Music Shop</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="_0">0 $</string>
    <string name="quantity">Quantity</string>
    <string name="order_price">Order Price</string>
    <string name="sale_30">Sale -30%</string>
    <string name="your_name">Your Name</string>
    <string name="zero">0</string>
    <string name="guitars">guitars</string>
    <string name="guitar1">guitar1</string>
    <string name="input_your_name">Input Your name</string>
    <string name="select_item">Select Item</string>
    <string name="stratocasterred_001">StratocasterRed#001</string>
    <string name="stratocaster_red_001" />
    <string name="totalCost">0</string>
    <string name="currency">$</string>
    <string name="orderCountNumber">0</string>
    <string name="plus">+</string>
    <string name="mainAdd_to_cart">ADD TO CART</string>
</resources>